Changes for Plack::App::ServiceStatus

{{$NEXT}}

0.912     2023-11-27 14:24:46+01:00
    - added to_app to example in SYNOPIS (Thomas Klausner)


0.911     2023-02-14 20:58:04+01:00
    - use more complex strftime format, which is also more portable (Thomas Klausner)
    - bump perl req to 5.24 so i can use postfix deref (Thomas Klausner)
    - Fixed minor pod typo. (Mohammad S Anwar)


0.910     2023-02-09 21:41:03+01:00
    - add started_at_iso8601 human readable timestamp (Thomas Klausner)


0.909     2023-02-09 21:12:45+01:00
    - add script to generate buildinfo (Thomas Klausner)
    - display buildinfo from a json file (Thomas Klausner)


0.908     2022-09-19 13:15:06+02:00
    - less bug-prone way to pass args to object during new


0.907     2022-09-19 12:56:06+02:00
    - show hostname in response (if show_hostname is set)


0.906     2022-08-01 16:11:15+02:00
    - add Checks for raw DBI and DBIx::Connector


0.905     2022-08-01 15:58:12+02:00 [BROKEN]
    - bad release, please ignore


0.904     2021-01-03 17:58:09+01:00
    - dist housekeeping: github issues,
      Dist::Zilla::PluginBundle::Author::DOMM
    - Tidied up repo meta. (Mohammad S Anwar)


0.903   2018-06-25T13:41:15
    - add app version to reported static data


0.902   2016-11-21T14:42:21
     - Add Icinga/Nagios check script (mstock)
     - Add Net::Stomp connection check (mstock)


0.901   2016-06-18T17:46:43
    - better / more docs


0.900   2016-06-13T15:02:50
    - first release
