@@ -1,6 +1,8 @@
 Changes for Plack::App::ServiceStatus
 
 {{$NEXT}}
+    - read buildinfo during new() (Thomas Klausner)
+
 
 0.912     2023-11-27 14:24:46+01:00
     - added to_app to example in SYNOPIS (Thomas Klausner)
